--- a/ControlsInWpf/MainWindow.xaml
+++ b/ControlsInWpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ControlsInWpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+    <Grid Background="Red">
+        
     </Grid>
 </Window>
